--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
 authors = ["vsvetlov <vsvetlov@gmail.com>"]
 packages = [
@@ -12,6 +12,7 @@ python = "^3.7"
 prompt = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
+wemake-python-styleguide = "^0.15.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
