Initial commit for brain-progression

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ ignore =
 per-file-ignores =
   # it is possibble to have prints in scripts
   brain_games/scripts/*.py: WPS421
-  brain_games/*.py: WPS421 S311
+  brain_games/*.py: WPS421 S311 WPS226 WPS336
 
 [tool:pytest]
 norecursedirs = __pycache__
