Simplify game functions

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,8 @@ max-line-length = 80
 doctests = True
 enable-extensions = G
 isort-show-traceback = True
+max-module-members = 10
+max-local-variables = 6
 
 # clean default ignore list
 ignore =
