--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,11 @@ max-local-variables = 6
 ignore =
 
 per-file-ignores =
-  # it is possibble to have prints in scripts
+  # it is possible to have prints in scripts
   brain_games/scripts/*.py: WPS421
-  brain_games/*.py: WPS421 S311 WPS226 WPS336
+  # S311 we don't use random for security purposes
+  # WPS421 allow to use print()
+  brain_games/*.py: S311 WPS421
 
 [tool:pytest]
 norecursedirs = __pycache__
