Fix progression question one more time

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,8 @@ per-file-ignores =
   brain_games/scripts/*.py: WPS421
   # S311 we don't use random for security purposes
   # WPS421 allow to use print()
-  brain_games/*.py: S311 WPS421
+  # W503 line break before binary operator
+  brain_games/*.py: S311 WPS421 W503
 
 [tool:pytest]
 norecursedirs = __pycache__
